# cmake-sub

./: .gitignore  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/orbbec/com/cplustest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/sampledata/: CMakeLists.txt  module.h  test.c
app/src/main/java/orbbec/com/cplustest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/orbbec/com/cplustest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
